--- a/css/sections/hero.css
+++ b/css/sections/hero.css
@@ -88,7 +88,7 @@
 }
 
 .hero-am-buttons button {
-  padding: 0.875rem 1.25rem;
+  padding: 0.6875rem 1.25rem;
   min-height: 2.875rem;
   background-color: var(--btn-primary-bg);
   color: var(--color-white);
@@ -97,6 +97,7 @@
   font-size: var(--lg-font-size);
   font-weight: 600;
   cursor: pointer;
+  border: 1px solid #0000;
 }
 
 .hero-am-buttons button:hover {
@@ -150,7 +151,7 @@
   row-gap: 16px;
   align-items: center;
   position: relative;
-
+  min-height: 21.13px;
   max-width: var(--max-content-width);
   width: 100%;
 }
@@ -159,7 +160,7 @@
   color: var(--color-text-light);
   font-weight: 400;
   font-size: var(--md-font-size);
-  min-width: 20ch;
+  min-width: 175px;
   min-height: 20px;
 }
 
@@ -461,6 +462,12 @@
   }
   .fall-hero-animation {
     margin-top: var(--space-md);
+  }
+}
+
+@media screen and (max-height: 600px) {
+  .trusted-teams {
+    position: relative;
   }
 }
 
